edition = "2023";

package internal.rpc.v1;

message Position {
  int64 x = 1;
  int64 y = 2;
}

message NodeData {
  string label = 1;
}

message Node {
  string id = 1;
  Position position = 2;
  NodeData data = 3;
  string type = 4;
}

message Edge {
  string id = 1;
  string source = 2;
  string target = 3;
  string type = 4;
}

message RandomGraphRequest {
  uint64 seed1 = 1;
  uint64 seed2 = 2;
  int64 num_nodes = 3;
  int64 initial_connected = 4;
  double rewiring_probability = 5;

  int64 layout_iterations = 6;
  double layout_area = 7;

  int64 walk_length = 8;
  int64 num_walks = 9;

  uint64 seed3 = 10;
  uint64 seed4 = 11;
}
message RandomGraphResponse {
  repeated Node nodes = 1;
  repeated Edge edges = 2;
}

service GraphService {
  rpc RandomGraph(RandomGraphRequest) returns (RandomGraphResponse);
}
